# dystopia-game

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
dys-client/: Cargo.toml  build.rs
dys-client/src/: main.rs
dys-datastore-mysql/: Cargo.toml
dys-datastore-mysql/src/: datastore.rs  lib.rs  query.rs
dys-game/: Cargo.toml
dys-game/benches/: simulation.rs
dys-game/data/: README.md
dys-game/src/: game.rs  game_log.rs  game_state.rs  game_tick.rs  lib.rs  physics_sim.rs  targeting.rs
dys-game/src/ai/: action.rs  agent.rs  belief.rs  combatant_ai.rs  goal.rs  mod.rs  planner.rs  strategy.rs  test_utils.rs
dys-game/src/ai/actions/: mod.rs
dys-game/src/ai/goals/: mod.rs
dys-game/src/ai/goap/: action.rs  agent.rs  belief.rs  goal.rs  mod.rs  planner.rs  strategy.rs
dys-game/src/ai/strategies/: mod.rs  move_to_location.rs  noop.rs  pick_up_ball.rs  throw_ball_at_target_location.rs
dys-game/src/game_objects/: ball.rs  combatant.rs  game_object.rs  game_object_type.rs  mod.rs  plate.rs
dys-game/src/generator/: mod.rs
dys-game/src/simulation/: ball.rs  combatant.rs  config.rs  event.rs  mod.rs  scoring.rs  simulation_event.rs
dys-matchvisualizer/: Cargo.toml
dys-matchvisualizer/build_scripts/: matchvisualizer-wasm.sh
dys-matchvisualizer/src/: main.rs
dys-matchvisualizer/src/ui/: components.rs  mod.rs  setup.rs  update.rs
dys-matchvisualizer/src/ui/components/: away_team_score_text.rs  away_team_score_update_text.rs  combatant_id_text.rs  game_log_perf_text.rs  home_team_score_text.rs  home_team_score_update_text.rs  match_timer_text.rs  mod.rs  postgame_scoreboard.rs
dys-matchvisualizer/src/visualizer/: components.rs  mod.rs  resources.rs  setup.rs  update.rs
dys-observability/: Cargo.toml
dys-observability/src/: lib.rs
dys-observability/src/logger/: mod.rs
dys-observability/src/middleware/: mod.rs
dys-observability/src/reqwest/: mod.rs
dys-protocol/: Cargo.toml  build.rs
dys-protocol/protos/common/: date.proto
dys-protocol/protos/services/auth/: account.proto
dys-protocol/protos/services/game_results/: stats.proto  summary.proto
dys-protocol/protos/services/match_results/: summary.proto
dys-protocol/protos/services/vote/: vote.proto
dys-protocol/protos/services/world/: schedule.proto  world.proto
dys-protocol/src/: lib.rs
dys-satisfiable-macros/: Cargo.toml
dys-satisfiable-macros/src/: lib.rs  satisfiable.rs  unique.rs
dys-server/: Cargo.toml  build.rs
dys-server/src/: main.rs
dys-service-base/: Cargo.toml
dys-service-base/src/: api.rs
dys-simulation/: Cargo.toml
dys-simulation/benches/: simulation.rs
dys-simulation/data/: given_names.txt  surnames.txt
dys-simulation/src/: combatant_statline.rs  game.rs  game_log.rs  game_stat.rs  game_state.rs  game_tick.rs  lib.rs  physics_sim.rs
dys-simulation/src/ai/: README.md  action.rs  agent.rs  belief.rs  goal.rs  mod.rs  planner.rs  sensor.rs  strategy.rs  test_utils.rs
dys-simulation/src/ai/actions/: mod.rs
dys-simulation/src/ai/beliefs/: belief_set.rs  mod.rs
dys-simulation/src/ai/goals/: mod.rs
dys-simulation/src/ai/sensors/: field_of_view.rs  mod.rs  proximity.rs
dys-simulation/src/ai/strategies/: look_around.rs  mod.rs  move_to_location.rs  noop.rs  pick_up_ball.rs  shove_combatant.rs  throw_ball_at_target_location.rs
dys-simulation/src/game_objects/: ball.rs  combatant.rs  game_object_type.rs  mod.rs  plate.rs
dys-simulation/src/generator/: mod.rs
dys-simulation/src/simulation/: ball.rs  collision.rs  combatant.rs  config.rs  mod.rs  scoring.rs  simulation_event.rs  simulation_stage.rs
dys-svc-api-gateway/: Cargo.toml  Dockerfile  build.rs
dys-svc-api-gateway/src/: main.rs
dys-svc-auth/: Cargo.toml  Dockerfile
dys-svc-auth/chart/: Chart.yaml
dys-svc-auth/chart/templates/: auth.yaml
dys-svc-auth/src/: main.rs
dys-svc-director/: Cargo.toml  Dockerfile
dys-svc-director/chart/: Chart.yaml
dys-svc-director/chart/templates/: director.yaml
dys-svc-director/migrations/: 20250722020944_create-world.sql  20250804194551_create-game-statlines.sql
dys-svc-director/src/: game_result.rs  lib.rs  main.rs  match_result.rs  schedule.rs  stats.rs  world.rs  world_old.rs
dys-svc-director/src/game/: log.rs  mod.rs  summary.rs  types.rs
dys-svc-director/src/stats/: mod.rs  recent.rs  season.rs  types.rs
dys-svc-director/src/vote/: mod.rs  proposal.rs  submit.rs
dys-svc-director/src/world/: mod.rs  state.rs
dys-svc-webapp/: Cargo.toml  Dockerfile  Frontend.Dockerfile  build.rs  package-lock.json
dys-svc-webapp/build_scripts/: build_webapp_frontend.ps1  build_webapp_frontend.sh
dys-svc-webapp/chart/: Chart.yaml
dys-svc-webapp/chart/templates/: webapp.yaml
dys-svc-webapp/frontend/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
dys-svc-webapp/frontend/src/: App.vue  main.ts  utils.ts
dys-svc-webapp/frontend/src/assets/: base.css
dys-svc-webapp/frontend/src/router/: index.ts
dys-svc-webapp/src/: main.rs
dys-testbench/: Cargo.toml
dys-testbench/src/: main.rs
dys-world/: Cargo.toml
dys-world/benches/: navmesh.rs
dys-world/src/: lib.rs  serde.rs  world.rs
dys-world/src/arena/: ball_spawn.rs  barrier.rs  combatant_start.rs  feature.rs  mod.rs  navmesh.rs  plate.rs  serde.rs  wall.rs
dys-world/src/attribute/: attribute_display.rs  attribute_source.rs  attribute_type.rs  instance.rs  mod.rs
dys-world/src/combatant/: combatant.rs  definition.rs  instance.rs  limb.rs  mod.rs  record.rs
dys-world/src/games/: instance.rs  mod.rs  serde.rs
dys-world/src/generator/: mod.rs
dys-world/src/history/: mod.rs  recordable.rs
dys-world/src/matches/: instance.rs  mod.rs  record.rs
dys-world/src/proposal/: mod.rs
dys-world/src/schedule/: calendar.rs  mod.rs  schedule_game.rs  season.rs  serde.rs  series.rs
dys-world/src/season/: mod.rs  season.rs  serde.rs  series.rs
dys-world/src/stat/: definition.rs  instance.rs  mod.rs  stat.rs  stat_display.rs  stat_source.rs
dys-world/src/team/: definition.rs  instance.rs  mod.rs  record.rs  serde.rs  team.rs
(+148 files in other folders)
