[workspace]
members = [ "dys-*" ]

resolver = "2"

# Ensure we're optimizing Rapier (physics) always in dev builds
[profile.dev.package.rapier3d]
opt-level = 3

# For smaller + faster WASM artifacts: https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html#link-time-optimization-lto
[profile.wasm]
inherits = "release"
lto = true
codegen-units = 1

[profile.release.package.dys-matchvisualizer]
opt-level = "z"

[workspace.dependencies]
# -----------------------
# Build dependencies
# -----------------------
build-deps = "0.1.4"
tonic-build = "0.13"

# -----------------------
# Dev dependencies
# -----------------------
criterion = "0.6.0"

# -----------------------
# Runtime dependencies
# -----------------------
ahash = { version = "0.8", default-features = false, features = ["no-rng", "std"] }
async-nats = "0.42.0"
axum = "0.8.4"
bevy = { version = "0.16.1", features = ["bevy_asset", "bevy_color", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "bevy_state", "bevy_text", "web", "default_font"] }
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.40" }
crossbeam = "0.8.4"
dyn-clone = "1.0"
eframe = "0.31"
egui = "0.31"
futures = "0.3.31"
indexmap = "2.10"
once_cell = "1.19.0"
opentelemetry = "0.30.0"
opentelemetry-appender-tracing = "0.30.1"
opentelemetry-http = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", default-features = false, features = ["grpc-tonic", "trace", "metrics", "logs", "internal-logs"] }
opentelemetry_sdk = { version = "0.30.0", features = ["trace", "metrics", "logs", "rt-tokio"] }
ordered-float = "5.0.0"
petgraph = "0.8.2"
postcard = { version = "1.0.8", features = ["alloc"] }
prost = { version = "0.14.1" }
prost-build = "0.14.1"
rand = "0.9.1"
rand_distr = "0.5.1"
rand_pcg = "0.9.0"
rapier3d = { version = "0.26.1", features = ["serde-serialize", "enhanced-determinism"] }
redis = { version = "0.32.3", features = ["tokio-rustls-comp", "safe_iterators"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0.120" }
ts-rs = { version = "11.0.1", features = ["serde-json-impl", "no-serde-warnings"] }
tokio = { version = "1.40", features = ["full"] }
# ZJ-TODO: until a release after tonic 0.13.1, we need to pull straight from master
# Otherwise, Tonic references an older version of prost-build
# tonic = "0.13.1"
tonic = { git = "https://github.com/hyperium/tonic.git", rev = "e58aec1985d8b5e4ac391a11372801df8b1701ae" }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = { version = "0.1.40", features = ["attributes", "log"] }
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
wasm-bindgen = "0.2.100"
web-time = "1.1.0"