[workspace]
members = [ "dys-*" ]

resolver = "2"

# Ensure we're optimizing Rapier (physics) always in dev builds
[profile.dev.package.rapier3d]
opt-level = 3

# For smaller + faster WASM artifacts: https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html#link-time-optimization-lto
[profile.wasm]
inherits = "release"
lto = true
codegen-units = 1

[profile.release.package.dys-matchvisualizer]
opt-level = "z"

[workspace.dependencies]
# -----------------------
# Dev dependencies
# -----------------------
criterion = "0.7.0"

# -----------------------
# Runtime dependencies
# -----------------------
ahash = { version = "0.8", default-features = false, features = ["no-rng", "std"] }
anyhow = "1.0.100"
axum = "0.8.4"
bevy = { version = "0.16.1", features = ["bevy_asset", "bevy_color", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "bevy_state", "bevy_text", "web", "default_font"] }
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
crossbeam = "0.8.4"
dyn-clone = "1.0"
eframe = "0.31"
egui = "0.31"
futures = "0.3.31"
indexmap = "2.10"
lazy_static = "1.5.0"
once_cell = "1.19.0"
opentelemetry = "0.30.0"
opentelemetry-appender-tracing = "0.30.1"
opentelemetry-otlp = { version = "0.30.0", default-features = false, features = ["grpc-tonic", "trace", "metrics", "logs", "internal-logs"] }
opentelemetry_sdk = { version = "0.30.0", features = ["trace", "metrics", "logs", "rt-tokio"] }
ordered-float = "5.0.0"
petgraph = "0.8.2"
postcard = { version = "1.0.8", features = ["alloc"] }
rand = "0.10.2"
rand_distr = "0.6.0"
rand_pcg = "0.10.2"
rapier3d = { version = "0.34.0", features = ["serde-serialize", "enhanced-determinism"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0.120" }
thiserror = "2.0.17"
tracing = { version = "0.1.40", features = ["attributes", "log"] }
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
wasm-bindgen = "=0.2.104"
web-sys = { version = "0.3.81", features = ["console"] }
web-time = "1.1.0"

# -----------------------
# Runtime macro dependencies
# -----------------------
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }