[package]
name = "dys-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion.workspace = true

[dependencies]
dys-world = { path = "../dys-world" }

crossbeam = "0.8.4"
rand = "0.8.5"
rand_pcg = "0.3.1"
rapier3d = "0.18"

[[bench]]
name = "simulation"
harness = false