[package]
name = "dys-matchvisualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
dys-simulation = { path = "../dys-simulation" }
dys-world = { path = "../dys-world" }

bevy-ui-debug-overlay = "0.2.0"

bevy.workspace = true
once_cell.workspace = true
postcard.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
web-time.workspace = true