[package]
name = "dys-matchvisualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
dys-simulation = { path = "../dys-simulation" }
dys-stat = { path = "../dys-stat" }
dys-world = { path = "../dys-world" }

bevy.workspace = true
once_cell.workspace = true
postcard.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
web-time.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", default-features = false, features = ["wasm_js"] }