[package]
name = "dys-observability"
description = "Library for easy access to logging and observability tools"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
opentelemetry.workspace = true
opentelemetry-http.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true