[package]
name = "dys-observability"
description = "Library for easy access to logging and observability tools"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true