[package]
name = "dys-protocol"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["http", "nats"]
http = []
nats = ["dep:dys-nats"]

[build-dependencies]
tonic-prost-build.workspace = true
prost-build.workspace = true
walkdir = "2.5.0"

[dependencies]
dys-nats = { path = "../dys-nats", optional = true }

async-nats.workspace = true
bytes.workspace = true
futures.workspace = true
postcard.workspace = true
prost.workspace = true
serde.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tower.workspace = true