[package]
name = "dys-satisfiable-macros"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
dys-satisfiable = { path = "../dys-satisfiable" }

ahash.workspace = true
dyn-clone.workspace = true
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true