[package]
name = "dys-service-base"
version = "0.1.0"
edition = "2024"

[dependencies]
dys-nats = { path = "../dys-nats" }

anyhow.workspace = true
async-nats.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true

[lints]
workspace = true
