[package]
name = "dys-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion.workspace = true

[dependencies]
dys-world = { path = "../dys-world" }

dys-satisfiable = { path = "../dys-satisfiable" }
dys-satisfiable-macros = { path = "../dys-satisfiable-macros" }

crossbeam.workspace = true
ordered-float.workspace = true
petgraph.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_pcg.workspace = true
rapier3d.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true

[lib]
bench = false

[[bench]]
name = "simulation"
harness = false
