[package]
name = "dys-svc-api-gateway"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
walkdir.workspace = true

[dependencies]
dys-nats = { path = "../dys-nats" }
dys-observability = { path = "../dys-observability" }

async-nats.workspace = true
axum.workspace = true
futures.workspace = true
postcard.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
bytes = "1.10.1"
