[package]
name = "dys-svc-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
dys-observability = { path = "../dys-observability" }
dys-protocol = { path = "../dys-protocol" }

dys-datastore = { path = "../dys-datastore" }
dys-datastore-valkey = { path = "../dys-datastore-valkey" }

async-nats.workspace = true
axum.workspace = true
futures.workspace = true
postcard.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
log = "0.4.25"