[package]
name = "dys-svc-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
dys-nats = { path = "../dys-nats" }
dys-observability = { path = "../dys-observability" }
dys-protocol = { path = "../dys-protocol", features = ["nats"] }

dys-datastore = { path = "../dys-datastore" }
dys-datastore-valkey = { path = "../dys-datastore-valkey" }

tokio.workspace = true
tracing.workspace = true