[package]
name = "dys-svc-director"
version = "0.1.0"
edition = "2021"

[dependencies]
dys-simulation = { path = "../dys-simulation" }
dys-observability = { path = "../dys-observability" }
dys-world = { path = "../dys-world" }

dys-datastore = { path = "../dys-datastore" }
dys-datastore-valkey = { path = "../dys-datastore-valkey" }

axum.workspace = true
postcard.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true