[package]
name = "dys-svc-director"
version = "0.1.0"
edition = "2021"

[dependencies]
dys-nats = { path = "../dys-nats" }
dys-simulation = { path = "../dys-simulation" }
dys-stat = { path = "../dys-stat" }
dys-observability = { path = "../dys-observability" }
dys-protocol = { path = "../dys-protocol", features = ["nats"] }
dys-world = { path = "../dys-world" }

dys-datastore = { path = "../dys-datastore" }
dys-datastore-mysql = { path = "../dys-datastore-mysql" }
dys-datastore-valkey = { path = "../dys-datastore-valkey" }

bytes.workspace = true
chrono.workspace = true
postcard.workspace = true
rand.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true