[package]
name = "dys-svc-director"
version = "0.1.0"
edition = "2024"
default-run = "service"

[lints]
workspace = true

[lib]
name = "director"
path = "./src/lib.rs"

[[bin]]
name = "service"
path = "./src/bin/service.rs"

[[bin]]
name = "gen-openapi"
path = "./src/bin/generate_openapi.rs"

[dependencies]
dys-nats = { path = "../dys-nats" }
dys-simulation = { path = "../dys-simulation" }
dys-stat = { path = "../dys-stat" }
dys-observability = { path = "../dys-observability" }
dys-protocol = { path = "../dys-protocol", features = ["nats"] }
dys-world = { path = "../dys-world" }

dys-service-base-macros = { path = "../dys-service-base-macros" }

dys-datastore = { path = "../dys-datastore" }
dys-datastore-mysql = { path = "../dys-datastore-mysql" }
dys-datastore-valkey = { path = "../dys-datastore-valkey" }

async-nats.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
postcard.workspace = true
rand.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
serde.workspace = true
utoipa.workspace = true