[package]
name = "dys-svc-webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
dys-observability = { path = "../dys-observability" }
dys-protocol = { path = "../dys-protocol" }

axum.workspace = true
tonic.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true