[package]
name = "dys-svc-webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
dys-nats = { path = "../dys-nats" }
dys-observability = { path = "../dys-observability" }
dys-protocol = { path = "../dys-protocol", features = ["http", "nats"] }

async-nats.workspace = true
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true