[package]
name = "dys-testbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dys-game = { path = "../dys-simulation" }
dys-observability = { path = "../dys-observability" }
dys-world = { path = "../dys-world" }

postcard.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-subscriber.workspace = true