[package]
name = "dys-testbench"
version = "0.1.0"
edition = "2021"

[dependencies]
dys-simulation = { path = "../dys-simulation" }
dys-observability = { path = "../dys-observability" }
dys-world = { path = "../dys-world" }

postcard.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-subscriber.workspace = true