[package]
name = "dys-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion.workspace = true

[dependencies]
ordered-float.workspace = true
petgraph.workspace = true
rapier3d.workspace = true

[[bench]]
name = "navmesh"
harness = false