[package]
name = "dys-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion.workspace = true

# used for testing world serialization
serde_json.workspace = true

[dependencies]
ordered-float.workspace = true
petgraph.workspace = true
rand.workspace = true
rand_distr.workspace = true
rapier3d.workspace = true
serde.workspace = true
ts-rs.workspace = true
tracing.workspace = true

[lib]
bench = false

[[bench]]
name = "navmesh"
harness = false